// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnlockTokensRow should render with isReady = false 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 cPmOfx"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jtRNyC"
          >
            <span
              class="whitespace-nowrap font-bold text-theme-secondary-900 dark:text-theme-secondary-200"
              data-testid="Amount"
            >
              10 LSK
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dEQQQI"
          >
            <time
              class="text-theme-secondary-700"
              datetime="Wed, 01 Jan 2020 00:00:00 GMT"
            >
              01 Jan 2020 at 00:00:00 (6 months ago)
            </time>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 kXCVVq justify-end"
          >
            <div
              class="flex items-center"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="text-theme-secondary-700"
                  data-testid="UnlockableBalanceRow__status"
                >
                  Locked
                </span>
                <div
                  class="sc-bdnxRM NjstW text-theme-secondary-700 mr-3 ml-2"
                  height="20"
                  width="20"
                >
                  <svg>
                    lock.svg
                  </svg>
                </div>
              </div>
              <input
                class="Checkbox-sc-1aq7nos-0 drePYo"
                color="success"
                disabled=""
                type="checkbox"
              />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`UnlockTokensRow should render with isReady = true 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 cPmOfx"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jtRNyC"
          >
            <span
              class="whitespace-nowrap font-bold text-theme-secondary-900 dark:text-theme-secondary-200"
              data-testid="Amount"
            >
              10 LSK
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dEQQQI"
          >
            <time
              class="text-theme-secondary-700"
              datetime="Wed, 01 Jan 2020 00:00:00 GMT"
            >
              01 Jan 2020 at 00:00:00 (6 months ago)
            </time>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 kXCVVq justify-end"
          >
            <div
              class="flex items-center"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="text-theme-secondary-700"
                  data-testid="UnlockableBalanceRow__status"
                >
                  Unlockable
                </span>
                <div
                  class="sc-bdnxRM NjstW text-theme-primary-600 mr-3 ml-2"
                  height="20"
                  width="20"
                >
                  <svg>
                    unlock-token.svg
                  </svg>
                </div>
              </div>
              <input
                checked=""
                class="Checkbox-sc-1aq7nos-0 drePYo"
                color="success"
                type="checkbox"
              />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
